# lexfold

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: main.py
db/: schema.sql
eval/: golden.yaml
tests/: test_db_schema.py  test_scaffold.py
ui/: admin_app.py  chat_app.py
