[project]
name = "lexfold"
version = "0.1.0"
description = "SHB LexFold — máy tính hiệu lực pháp quy + tầng trả lời có kiểm chứng"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "rank-bm25>=0.2.2",
    "pyvi>=0.1.1",
    "streamlit>=1.37",
    "pyvis>=0.3.2",
    "python-docx>=1.1",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=3.0"]  # BGE-M3 (D-40) — nặng (torch), chỉ cần cho dense/embedding

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingest", "engine", "engine.invariants", "retrieval", "answer", "api", "ui", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
